--- a/Register/Register.html
+++ b/Register/Register.html
@@ -27,7 +27,7 @@
 <body>
     <nav>  
        
-        <a href = "http://localhost:3456/log-in">log-in</a>
+        <a href = "/log-in">log-in</a>
     </nav>
     <script src="/js2"></script>
 </body>
