--- a/Login/LogIn.html
+++ b/Login/LogIn.html
@@ -24,7 +24,7 @@
 
 
 <body>
-    <embed id = "pretty please in with the cherry on top at the end">
+    <embed id = "PRETTY PLEASE WITH A CHERRY ON TOP">
     <script src="/js3"></script>
     <script src="Login.js"></script>
 </body>
