--- a/emailsite/test.html
+++ b/emailsite/test.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style3" >
+    <link rel="stylesheet" href="Login.css" >
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <title>Document</title>
 </head>
 <body>
-    <title>PLEASE WORK GOD</title>
+                    <box id = "box"></box><h1 id = "Title">Welcome To Emailing Azari </h1>
+    <h5 id = "Subtitle">This Page Exist so that you can log in to your account and then email Azari</h5>
+     <box id = "Regcontainer">
+    <form id = 'RegBox'>
+    <input type = "username" id = "username" placeholder="Enter User-Name Here">
+        <input type = "password" id = "SuperSecret" placeholder="Enter Password Here" autocomplete="new-password">
+        <button id = "submitLogin">submit</button>
+       
+    </form>
+     </box>
+
+
+
+
+    <embed id = "PRETTY PLEASE WITH A CHERRY ON TOP">
+    <script src="/js3"></script>
+    <script src="Login.js"></script>
 </body>
+
 </html>
