--- a/Login/test.html
+++ b/Login/test.html
@@ -18,6 +18,7 @@
     <input type = "username" id = "username" placeholder="Enter User-Name Here">
         <input type = "password" id = "SuperSecret" placeholder="Enter Password Here" autocomplete="new-password">
         <button id = "submitLogin">submit</button>
+        <a id = "Register">Register</a>
        
     </form>
      </box>
