--- a/emailsite/main.html
+++ b/emailsite/main.html
@@ -12,10 +12,14 @@
     <title>Document</title>
 </head>
 <body>
+    <mail id = "LeftM"></mail>
+    <mail id = "TopLeftM"></mail>
     <form id="BigForm">
     <input type = "textbox" id = "content" placeholder="Email Stuff Here">
     <button type="button" id = "submitform" name = "Submit">Email Azari</button>
     </form>
     <script src="/js"></script>
+    <mail id = "TopRightM"></mail>
+    <mail id = "RightM"></mail>
 </body>
 </html>
