--- a/Login/test.html
+++ b/Login/test.html
@@ -11,14 +11,14 @@
     <title>Document</title>
 </head>
 <body>
-                    <box id = "box"></box><h1 id = "Title">Welcome To Emailing Azari </h1>
-    <h5 id = "Subtitle">This Page Exist so that you can log in to your account and then email Azari</h5>
+                    <box id = "box"></box><h1 id = "Title">Log-in To Emailing Azari</h1>
+    <h5 id = "Subtitle">Log-in To Your Account here</h5>
      <box id = "Regcontainer">
     <form id = 'RegBox'>
     <input type = "username" id = "username" placeholder="Enter User-Name Here">
         <input type = "password" id = "SuperSecret" placeholder="Enter Password Here" autocomplete="new-password">
         <button id = "submitLogin">submit</button>
-        <a id = "Register">Register</a>
+        <a id = "Register" >Register</a>
        
     </form>
      </box>
