--- a/Register/Register.html
+++ b/Register/Register.html
@@ -9,8 +9,8 @@
    
     <title>Document</title>
 </head>
-                    <h1>Create a new log-in </h1>
-    <h5>This is so you can register a new accounbt</h5>
+                    <h1>Register For A New Account </h1>
+    <h5>Welcome New User</h5>
      
     <form id = 'wholeform'>
     <input type = "username" id = "username" placeholder="Enter User-Name Here">
@@ -18,7 +18,6 @@
     <input type = "email" id = "email" placeholder="Enter New Email">
     <input type = "name" id = "name" placeholder="Enter your name">
         <button id = "submitLogin">submit</button>
-       
     </form>
 
 
