--- a/emailsite/main.html
+++ b/emailsite/main.html
@@ -13,6 +13,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 id ="title">Welcome User</h1>
+
     <mail id = "LeftM"></mail>
     <mail id = "TopLeftM"></mail>
     <form id="BigForm">
