--- a/Login/test.html
+++ b/Login/test.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style3" >
-    <link rel="stylesheet" href="Login.css" >
+    <!-- <link rel="stylesheet" href="Login.css" > -->
    
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
@@ -27,8 +27,8 @@
 
 
 
-    <embed id = "PRETTY PLEASE WITH A CHERRY ON TOP">
-        <script src="Login.js"></script>
+
+        <!-- <script src="Login.js"></script> -->
         <script src="/js3"></script>
    
 </body>
