--- a/Register/Register.html
+++ b/Register/Register.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style2" >
-    <link rel="stylesheet" href="Register.css" >
+    <!-- <link rel="stylesheet" href="Register.css" > -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
    
     <title>Document</title>
@@ -30,5 +30,5 @@
         <a href = "/login">log-in</a>
     </nav>
     <script src="/js2"></script>
-    <script src="Register.js"></script>
+    <!-- <script src="Register.js"></script> -->
 </body>
