--- a/emailsite/main.html
+++ b/emailsite/main.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="/style" >
-    <link rel="stylesheet" href="main.css" >
+    <!-- <link rel="stylesheet" href="main.css" > -->
     
     
     <title>Document</title>
@@ -22,7 +22,7 @@
     <button type="button" id = "submitform" name = "Submit">Email Azari</button>
     </form>
     <script src="/js"></script>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
     <mail id = "TopRightM"></mail>
     <mail id = "RightM"></mail>
 </body>
